syntax = "proto3";
package protorpc;

option go_package = "./mediapb";


service Media {
  rpc UploadImages (UploadImagesRequest) returns (UploadImagesResponse);
}

message UploadImagesRequest {
  repeated ImageUpload images = 1;
}

message ImageUpload {
  string filename = 1;
  bytes content = 2;
  string content_type = 3;
}

message UploadImagesResponse {
  repeated MediaMessage data = 1;
}

message MediaMessage {
  int64 id = 1;
  string url = 2;
  int64 size = 3;
  optional int64 height = 4;
  optional int64 width = 5;
}
